@@ -1,3 +1,11 @@
+2008-06-27  Jens Granseuer  <jensgr@gmx.net>
+
+	Based on a patch by: Andrey Gusev <ronne@list.ru>
+
+	* drwright.c: (break_window_postpone_cb): when postponing a break
+	don't go right back to warn state, but award some bonus time according
+	to the already elapsed break time (bug #133295)
+
 2008-06-15  Jens Granseuer  <jensgr@gmx.net>
 
 	Patch by: Andrey Gusev <ronne@list.ru>
